# lindyhop-aachen

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.test.node  Dockerfile.test.rust  README.md  Rocket.toml  deploy_rsa.enc  package.json
admin/: elm.json
admin/src/: Events.elm  Main.elm
admin/src/Pages/: CreateEvent.elm  CreateLocation.elm  EditEvent.elm  EditLocation.elm  Overview.elm  Utils.elm
admin/src/Utils/: MultiselectCalendar.elm  NaiveDateTime.elm
admin/src/Utils/MultiselectCalendar/: Calendar.elm
migrations/2019-05-05-164447_init/: down.sql  up.sql
spec/: admin.md  priority guide.md  website.md
src/: api.rs  error.rs  events.rs  main.rs  schema.rs  store.rs  website.rs
src/store/: action.rs  db.rs  mod.rs  model.rs  routes.rs
src/store/db/: id.rs  mod.rs
styles/: _colors.scss  _event_details.scss  _event_overview.scss  _events.scss  _homepage.scss  _infos.scss  _occurrence_overview.scss  _widgets.scss  main.scss
