[package]
name = "lindyhop-aachen"
version = "0.1.0"
authors = ["Y0hy0h <Y0hy0h@users.noreply.github.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
rocket_contrib = { version = "0.4.2", features = ["diesel_sqlite_pool", "uuid"] }
diesel = { version = "1.4.3", features = ["sqlite", "r2d2", "chrono"] }
libsqlite3-sys = { version = "0.16.0", features = ["bundled"] }
diesel_migrations = "1.4.0"
maud = { version = "0.21.0", features = ["rocket"] }
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
chrono = { version = "0.4.9", features = ["serde"] }
uuid = { version = "0.7.4", features = ["serde", "v4"] }
juniper = "0.14.0"
juniper_rocket = "0.5.0"
